1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
spec:
  type: ClusterIP
  selector:
    app: pong # This is the app as declared in the deployment.
  ports:
     - port: 2346 # This is a port that is available to the cluster, in this case it can be ~ anything
       protocol: TCP
       targetPort: 3001 # This is the target port
